[tool.poetry]
name = "glowl"
version = "0.1.0"
description = ""
authors = ["eeriemyxi <eeriemyxi@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
glowl = 'glowl.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
