[tool.poetry]
name = "glowl"
version = "0.1.11"
description = "Typing mistakes helper."
authors = ["eeriemyxi <myxi@envs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
glowl = 'glowl.__main__:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
