[tool.poetry]
name = "glowl"
version = "0.2.0"
description = "Typing mistakes helper."
authors = ["eeriemyxi <myxi@envs.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
glowl = 'glowl.__main__:main'

[tool.poetry.group.dev.dependencies]
marko = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
